--- a/MM Systems/WebApp/WebApp/Views/Activiteiten.xaml
+++ b/MM Systems/WebApp/WebApp/Views/Activiteiten.xaml
@@ -11,20 +11,8 @@
     <Grid x:Name="LayoutRoot">
         <sdk:DataGrid AutoGenerateColumns="False" x:Name="gridd" ItemsSource="{Binding}" >
             <sdk:DataGrid.Columns>
-                <sdk:DataGridTemplateColumn Header="Activiteit" Width="SizeToCells" IsReadOnly="True">
-                    <sdk:DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Activiteit, Mode=TwoWay}"></TextBlock>
-                        </DataTemplate>
-                    </sdk:DataGridTemplateColumn.CellTemplate>
-                </sdk:DataGridTemplateColumn>
-                <sdk:DataGridTemplateColumn Header="Categorie" Width="SizeToCells" IsReadOnly="True">
-                    <sdk:DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Categorie, Mode=TwoWay}"></TextBlock>
-                        </DataTemplate>
-                    </sdk:DataGridTemplateColumn.CellTemplate>
-                </sdk:DataGridTemplateColumn>
+                <sdk:DataGridTextColumn Header="Activiteit" Binding="{Binding Activiteit}"/>
+                <sdk:DataGridTextColumn Header="Categorie" Binding="{Binding Categorie}"/>
                 <sdk:DataGridTemplateColumn Width="SizeToCells" IsReadOnly="True">
                     <sdk:DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
