--- a/MM Systems/PanoramaApp3/PanoramaApp3/Pages/CircumstancesPage.xaml
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/Pages/CircumstancesPage.xaml
@@ -7,6 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:controls2="clr-namespace:Coding4Fun.Toolkit.Controls;assembly=Coding4Fun.Toolkit.Controls"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
@@ -47,7 +48,7 @@
                     </toolkit:ListPicker.ItemTemplate>
                 </toolkit:ListPicker>
                 <TextBlock Text="Aantal uur geslapen"/>
-                <TextBox InputScope="Number" x:Name="txtuurgeslapen" Text="0" HorizontalAlignment="Left" TextChanged="Txtuurgeslapen_OnTextChanged"/>
+                <controls2:TimeSpanPicker x:Name="txtuurgeslapen" Step="1:00" ValueStringFormat="{}{0:h}" HorizontalAlignment="Left" ValueChanged="Txtuurgeslapen_OnValueChanged"/>
                 <Button Content="Oke" Click="ButtonBase_OnClick"></Button>
             </StackPanel>
         </Grid>
