--- a/MM Systems/PanoramaApp3/PanoramaApp3/Pages/ActivityPage.xaml
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/Pages/ActivityPage.xaml
@@ -1,4 +1,5 @@
-﻿<phone:PhoneApplicationPage
+﻿<phone:PhoneApplicationPage 
+    x:Name="test"
     x:Class="PanoramaApp3.Pages.ActivityPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -12,7 +13,9 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
-    shell:SystemTray.IsVisible="True">
+    shell:SystemTray.IsVisible="True"
+    >
+
     <phone:PhoneApplicationPage.Resources>
         <DataTemplate x:Key="ActivitiesTemplate">
             <StackPanel Orientation="Horizontal">
@@ -78,13 +81,14 @@
             </Setter>
         </Style>
     </phone:PhoneApplicationPage.Resources>
+
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
+
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}"/>
