--- a/MM Systems/WebApp/WebApp/DialogBoxes/AddUser.xaml
+++ b/MM Systems/WebApp/WebApp/DialogBoxes/AddUser.xaml
@@ -12,12 +12,12 @@
 
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-        </Grid>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
+                <ColumnDefinition Width="2*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>    
         <StackPanel Grid.Column="0" Orientation="Vertical">
-                <TextBlock Margin="4" Text="Naam"></TextBlock>
+            <TextBlock Margin="4" Text="Naam"></TextBlock>
             <TextBlock Margin="6" Text="Voornaam"></TextBlock>
             <TextBlock Margin="6" Text="Adres"></TextBlock>
             <TextBlock Margin="6" Text="Nummer"></TextBlock>
@@ -27,15 +27,26 @@
             <TextBlock Margin="6" Text="Paswoord"></TextBlock>
         </StackPanel>
         <StackPanel Grid.Column="1" Orientation="Vertical">
-            <TextBox Margin="2" x:Name="btnNaam" Width="100"></TextBox>
-            <TextBox Margin="2" x:Name="btnVoornaam" Width="100"></TextBox>
-            <TextBox Margin="2"  x:Name="btnAdres" Width="100"></TextBox>
-            <TextBox Margin="2" x:Name="btnNummer" Width="100"></TextBox>
-            <TextBox Margin="2" x:Name="btnPlaats" Width="100"></TextBox>
-            <TextBox Margin="2" x:Name="btnPostcode" Width="100"></TextBox>
-            <TextBox Margin="2" x:Name="btngebruikersnaam" Width="100"></TextBox>
-            <TextBox Margin="2" x:Name="btnpasw" Width="100"></TextBox>
+            <TextBox Margin="2" x:Name="txtNaam" LostFocus="txtNaam_LostFocus_1"/>
+            <TextBox Margin="2" x:Name="txtVoornaam" LostFocus="txtVoornaam_LostFocus"/>
+            <TextBox Margin="2"  x:Name="txtAdres" LostFocus="txtAdres_LostFocus"/>
+            <TextBox Margin="2" x:Name="txtNummer" LostFocus="txtNummer_LostFocus"/>
+            <TextBox Margin="2" x:Name="txtPlaats" LostFocus="txtPlaats_LostFocus"/>
+            <TextBox Margin="2" x:Name="txtPostcode" LostFocus="txtPostcode_LostFocus"/>
+            <TextBox Margin="2" x:Name="txtgebruikersnaam" LostFocus="txtgebruikersnaam_LostFocus"/>
+            <PasswordBox Margin="2" x:Name="pwpasw" LostFocus="pwpasw_LostFocus"/>
         </StackPanel>
+            <StackPanel x:Name="sp_images" Orientation="Vertical" Grid.Column="2">
+                <Image MinHeight="25" Name="img_check_1" Margin="1.3" Stretch="None"/>
+                <Image MinHeight="25" Name="img_check_2" Margin="1.3" Stretch="None"/>
+                <Image MinHeight="25" Name="img_check_3" Margin="1.3" Stretch="None"/>
+                <Image MinHeight="25" Name="img_check_4" Margin="1.3" Stretch="None"/>
+                <Image MinHeight="25" Name="img_check_5" Margin="1.3" Stretch="None"/>
+                <Image MinHeight="25" Name="img_check_6" Margin="1.3" Stretch="None"/>
+                <Image MinHeight="25" Name="img_check_7" Margin="1.3" Stretch="None"/>
+                <Image MinHeight="25" Name="img_check_8" Margin="1.3" Stretch="None"/>
+            </StackPanel>
+        </Grid>
         <Button x:Name="CancelButton" Content="Cancel" Click="CancelButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,0,0" Grid.Row="1" />
         <Button x:Name="OKButton" Content="OK" Click="OKButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,79,0" Grid.Row="1" />
     </Grid>
