--- a/MM Systems/WebApp/WebApp/UC/Login.xaml
+++ b/MM Systems/WebApp/WebApp/UC/Login.xaml
@@ -4,11 +4,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="480" d:DesignWidth="500">
+    d:DesignHeight="180" d:DesignWidth="500">
 
     <Grid>
-        <Rectangle HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0.75" Fill="#FF8A8A8A" />
-        <Border HorizontalAlignment="Center"  Width="400" Height="160" BorderBrush="White" BorderThickness="1">
+        <Border HorizontalAlignment="Center" BorderBrush="White" BorderThickness="1">
             <Grid HorizontalAlignment="Center" Margin="30">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -24,25 +23,22 @@
                             TextAlignment="Right" Text="User Name"/>
                 <TextBox x:Name="txtUsername"
                          Grid.Column="2" Grid.Row="0"
-                         Width="200" Margin="5 5"
-                         HorizontalAlignment="Left"/>
+                         Margin="5 5"/>
                 <TextBlock Grid.Column="0" Grid.Row="1"
                            TextAlignment="Right"
                            Text="Password"/>
                 <PasswordBox x:Name="txtPassword"
                              Grid.Column="2" Grid.Row="1"
-                             Width="200" Margin="5 5"
-                             HorizontalAlignment="Left"
+                              Margin="5 5"
                              Password="{Binding Password, Mode=TwoWay}" KeyUp="txtPassword_KeyUp" />
                 <StackPanel Grid.Column="2" Grid.Row="2"
                             Orientation="Horizontal"
-                            Width="200" Height="25"
                             Margin="5 5"
                             VerticalAlignment="Top" HorizontalAlignment="Left">
-                    <Button Margin="30 0 5 0" Width="50"
+                    <Button Margin="20 0 2 0"
                             Content="Login" Click="Login_Click" 
                             />
-                    <Button    Margin="5 0" Width="50"
+                    <Button    Margin="10 0"
                             HorizontalAlignment="Center"
                             Content="Cancel"  Click="Cancel_Click"/>
                 </StackPanel>
